# spacetraders-agent

./: .env.example  .gitignore  LICENSE  README.md  design.md  main.py  pyproject.toml
agent/: executor.py  intents.py  loop.py  loop_openapi_llm.py  reasoning.py  spacetraders_client.py  state.py
agent/persistence/: sqlite.py
codegen/: spacetraders-api-client-config.yaml
codegen/api_client/: README.md  pyproject.toml
codegen/api_client/spacetraders_api_client/: __init__.py
codegen/spacetraders_api_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
codegen/spacetraders_api_client/.openapi-generator/: FILES
codegen/spacetraders_api_client/docs/: AcceptContract200Response.md  AcceptContract200ResponseData.md  Agent.md  AgentsApi.md  Chart.md  Construction.md  ConstructionMaterial.md  Contract.md  ContractDeliverGood.md  ContractPayment.md  ContractTerms.md  ContractsApi.md  Cooldown.md  CreateChart201Response.md  CreateChart201ResponseData.md  CreateShipShipScan201Response.md  CreateShipShipScan201ResponseData.md  CreateShipSystemScan201Response.md  CreateShipSystemScan201ResponseData.md  CreateShipWaypointScan201Response.md  CreateShipWaypointScan201ResponseData.md  CreateSurvey201Response.md  CreateSurvey201ResponseData.md  DataApi.md  DeliverContract200Response.md  DeliverContract200ResponseData.md  DeliverContractRequest.md  DockShip200Response.md  ExtractResources201Response.md  ExtractResources201ResponseData.md  ExtractResourcesRequest.md  ExtractResourcesWithSurvey201Response.md  ExtractResourcesWithSurvey201ResponseData.md  Extraction.md  ExtractionYield.md  Faction.md  FactionTrait.md  FactionsApi.md  FleetApi.md  FulfillContract200Response.md  (+147 more)
codegen/spacetraders_api_client/models/: __init__.py  get_status_response_200.py  get_status_response_200_leaderboards_most_credits_item.py  get_status_response_200_leaderboards_most_submitted_charts_item.py  get_status_response_200_links_item.py  get_status_response_200_server_resets.py  jump_ship_body.py  (+3 more)
openapi_llm_agent/: __init__.py  design.md  loop.py
openapi_llm_agent/persistence/: __init__.py
tests/: test_intents.py  test_loop_stub.py  test_openapi_loop.py  test_persistence.py
tools/: generate_client.sh
(+471 files in other folders)
