[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spacetraders-llm-agent"
version = "0.1.0"
description = "Autonomous-but-advisable SpaceTraders agent (headless)."
authors = [{ name = "mindkeep" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.26",
  "openai>=2.15.0",
  "openapi-llm>=0.4.3",
  "pydantic>=2",
  "pytest>=9.0.2",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
  "typing-extensions>=4.7.1",
  "urllib3>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "openapi-generator-cli>=7.18.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
    "openapi-generator-cli>=7.18.0",
]
